fix letter spacing in titles

--- a/src/assets/scss/root/typography.scss
+++ b/src/assets/scss/root/typography.scss
@@ -19,6 +19,7 @@ h1, .h1 {
   margin-bottom: 24px;
   font-weight: 600;
   line-height: 1.1;
+  letter-spacing: -2.4px;
 
   @media only screen and (min-width: $md) {
     font-size: 80px;
@@ -32,6 +33,7 @@ h2, .h2 {
   margin-bottom: 24px;
   font-weight: 600;
   line-height: 1.1;
+  letter-spacing: -1.68px;
 
   @media only screen and (min-width: $md) {
     font-size: 56px;
@@ -45,6 +47,7 @@ h3, .h3 {
   margin-bottom: 16px;
   font-weight: 600;
   line-height: 1.1;
+  letter-spacing: -1.26px;
 
   @media only screen and (min-width: $md) {
     font-size: 42px;
